--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
         background-position: center;
         background-repeat: no-repeat;
       }
+      .consultant {
+        background-image: url(./images/consultation.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
       .transitionEase {
         transition: left 0.5s ease;
       }
@@ -977,8 +983,8 @@
 
       <section class="container mx-auto buildYourWebsite rounded mb-16">
         <div class="px-10 pt-16 pb-48">
-          <div class="space-y-4 flex justify-between flex-wrap">
-            <div>
+          <div class="flex justify-between flex-wrap">
+            <div class="space-y-4">
               <p class="text-white font-semibold">
                 // We Carry More Than Just Good Coding Skills
               </p>
@@ -1124,6 +1130,25 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- start consultation  -->
+      <section class="py-28 consultant">
+        <div class="flex justify-center items-center">
+          <div class="text-center space-y-6">
+            <p class="text-white font-semibold">
+              // Drop us a line! We are here to answer your questions 24/7
+            </p>
+            <h2 class="text-white text-4xl lg:text-7xl font-bold">
+              NEED A CONSULTATION?
+            </h2>
+            <button
+              class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+            >
+              Contact Us
+            </button>
           </div>
         </div>
       </section>
