--- a/index.html
+++ b/index.html
@@ -1152,6 +1152,156 @@
           </div>
         </div>
       </section>
+
+      <!-- start contact  -->
+      <section class="bg-base-100">
+        <div class="container mx-auto py-16 px-10 xl:px-0">
+          <div class="grid lg:grid-cols-2 gap-6">
+            <div class="shadow-2xl rounded-md p-6 order-last lg:order-first">
+              <form class="space-y-3">
+                <!-- name -->
+                <label class="form-control w-full">
+                  <div class="label">
+                    <span
+                      class="label-text text-[#282f3b] text-base font-semibold"
+                    >
+                      Name
+                    </span>
+                  </div>
+                  <input
+                    type="text"
+                    placeholder="Enter your name...."
+                    class="input input-bordered border-btnColor w-full focus:outline-none"
+                  />
+                </label>
+                <!-- email -->
+                <label class="form-control w-full">
+                  <div class="label">
+                    <span
+                      class="label-text text-[#282f3b] text-base font-semibold"
+                    >
+                      Email
+                    </span>
+                  </div>
+                  <input
+                    type="email"
+                    placeholder="Enter your email...."
+                    class="input input-bordered border-btnColor w-full focus:outline-none"
+                  />
+                </label>
+                <!-- subject -->
+                <label class="form-control w-full">
+                  <div class="label">
+                    <span
+                      class="label-text text-[#282f3b] text-base font-semibold"
+                    >
+                      Subject
+                    </span>
+                  </div>
+                  <input
+                    type="text"
+                    placeholder="Enter your subject...."
+                    class="input input-bordered w-full border-btnColor focus:outline-none"
+                  />
+                </label>
+                <!-- message -->
+                <label class="form-control w-full">
+                  <div class="label">
+                    <span
+                      class="label-text text-[#282f3b] text-base font-semibold"
+                    >
+                      Message
+                    </span>
+                  </div>
+
+                  <textarea
+                    rows="4"
+                    class="textarea textarea-bordered border-btnColor focus:outline-none"
+                    placeholder="Enter your message...."
+                  ></textarea>
+                </label>
+                <button
+                  class="btn bg-btnColor text-white rounded-none rounded-tl-xl rounded-br-xl hover:bg-btnColor w-full"
+                >
+                  Submit
+                </button>
+              </form>
+            </div>
+            <div class="space-y-6">
+              <!-- contact right context  -->
+              <div class="space-y-4">
+                <p class="text-btnColor font-semibold">// Contact Info to</p>
+                <h2
+                  class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-tight"
+                >
+                  Reach Our Expert Team
+                </h2>
+                <p class="text-[#6d6d6d]">
+                  Send a message through given form, If your enquiry is time
+                  sensitive please use below contact details.
+                </p>
+              </div>
+              <!-- contact box 01 -->
+              <div
+                class="p-6 border rounded-md hover:shadow-2xl transition duration-700"
+              >
+                <div class="flex items-center gap-4">
+                  <i
+                    class="fas fa-map-marker-alt bg-btnColor p-4 rounded-full text-white"
+                  ></i>
+
+                  <div>
+                    <h2 class="text-[#282f3b] text-2xl font-bold">
+                      Post Address
+                    </h2>
+                    <p class="text-[#6d6d6d]">
+                      280 Granite Run Drive Suite #200 Lancaster, PA 1760
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- contact box 02 -->
+              <div
+                class="p-6 border rounded-md hover:shadow-2xl transition duration-700"
+              >
+                <div class="flex items-center gap-4">
+                  <i
+                    class="fas fa-phone bg-btnColor p-4 rounded-full text-white"
+                  ></i>
+
+                  <div>
+                    <h2 class="text-[#282f3b] text-2xl font-bold">
+                      General Enquires
+                    </h2>
+                    <p class="text-[#6d6d6d]">
+                      Phone: +98 060 712 34 & Email: sendmail@qetus.com
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- contact box 03 -->
+              <div
+                class="p-6 border rounded hover:shadow-2xl transition duration-700"
+              >
+                <div class="flex items-center gap-4">
+                  <i
+                    class="fas fa-map-marker-alt bg-btnColor p-4 rounded-full text-white"
+                  ></i>
+
+                  <div>
+                    <h2 class="text-[#282f3b] text-2xl font-bold">
+                      Operation Hours
+                    </h2>
+                    <p class="text-[#6d6d6d]">
+                      Sun-Thursday: 09.00 to 07.00 (Friday: Closed)
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
