--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </nav>
     </header>
 
-    <main class="">
+    <main>
       <!-- start banner section  -->
       <section class="carousel h-[90vh]">
         <!-- slider One  -->
@@ -1303,6 +1303,113 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="py-10 bg-[#211835] sm:pt-16 lg:pt-24">
+      <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
+        <div
+          class="grid grid-cols-2 lg:grid-cols-4 gap-10 text-neutral-content rounded"
+        >
+          <aside class="space-y-3">
+            <a
+              href="index.html"
+              class="text-2xl lg:text-xl xl:text-2xl capitalize font-bold block"
+              ><span class="text-3xl text-btnColor">M</span>inimatic
+              <span class="text-3xl text-btnColor">S</span>olution</a
+            >
+            <div class="space-y-2">
+              <p class="lg:text-base text-lg xl:text-lg font-semibold">
+                Powerful Digital Solutions
+              </p>
+              <p class="text-[#aaafb8]">
+                Duty obligations of business it will frequently occur that
+                pleasures have to be repudiated and annoyances accepted.
+              </p>
+            </div>
+          </aside>
+
+          <nav class="space-y-3">
+            <header class="text-2xl font-semibold">Company</header>
+            <div class="flex flex-col gap-2">
+              <a class="link link-hover" href="/">Home</a>
+              <a class="link link-hover" href="#">About</a>
+              <a class="link link-hover" href="#">Service</a>
+              <a class="link link-hover" href="#">Contact</a>
+            </div>
+          </nav>
+          <nav class="space-y-3">
+            <header class="text-2xl font-semibold">Information</header>
+            <div class="flex flex-col gap-2">
+              <a class="link link-hover" href="#">How It's Works</a>
+              <a class="link link-hover" href="#">Testimonial</a>
+              <a class="link link-hover" href="#">Partners</a>
+              <a class="link link-hover" href="#">Pricing</a>
+            </div>
+          </nav>
+          <nav class="space-y-3">
+            <header class="text-2xl font-semibold">Legal</header>
+            <div class="flex flex-col gap-2">
+              <a class="link link-hover" href="#">Terms of use</a>
+              <a class="link link-hover" href="#">Privacy policy</a>
+              <a class="link link-hover" href="#">Cookie policy</a>
+            </div>
+          </nav>
+        </div>
+
+        <hr class="mt-16 mb-10 border-gray-800" />
+
+        <div class="flex flex-wrap items-center justify-between">
+          <a
+            href="index.html"
+            class="text-2xl text-white lg:text-xl xl:text-2xl capitalize font-bold block"
+            ><span class="text-3xl text-btnColor">M</span>inimatic
+            <span class="text-3xl text-btnColor">S</span>olution</a
+          >
+
+          <ul class="flex items-center space-x-3 md:order-3">
+            <li>
+              <a
+                href="#"
+                title=""
+                class="flex items-center justify-center text-white transition-all duration-200 bg-transparent border border-gray-700 rounded-full w-7 h-7 focus:bg-blue-600 hover:bg-blue-600 hover:border-blue-600 focus:border-blue-600"
+              >
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                title=""
+                class="flex items-center justify-center text-white transition-all duration-200 bg-transparent border border-gray-700 rounded-full w-7 h-7 focus:bg-blue-600 hover:bg-blue-600 hover:border-blue-600 focus:border-blue-600"
+              >
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                title=""
+                class="flex items-center justify-center text-white transition-all duration-200 bg-transparent border border-gray-700 rounded-full w-7 h-7 focus:bg-blue-600 hover:bg-blue-600 hover:border-blue-600 focus:border-blue-600"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                title=""
+                class="flex items-center justify-center text-white transition-all duration-200 bg-transparent border border-gray-700 rounded-full w-7 h-7 focus:bg-blue-600 hover:bg-blue-600 hover:border-blue-600 focus:border-blue-600"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
+
+          <p
+            class="w-full mt-8 text-sm text-center text-gray-100 md:mt-0 md:w-auto md:order-2"
+          >
+            © Copyright 2021, All Rights Reserved by ContestHub
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
