--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- tailwind customize  -->
 
@@ -166,7 +167,7 @@
           <!-- <div class="hero-overlay"></div> -->
           <div class="container text-center absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
             
-              <div class="space-y-6 max-w-3xl mx-auto">
+              <div data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-6 max-w-3xl mx-auto">
 
                 <p
                   class=" border-2 border-btnColor w-60 mx-auto py-4 rounded-tl-xl rounded-br-xl text-white"
@@ -217,7 +218,7 @@
             <!-- left content bottom  -->
             <div class="grid md:grid-cols-2 gap-6 pt-6">
               <!-- Experience  -->
-              <div class="space-y-4">
+              <div data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-4">
                 <i class="fas fa-medal text-4xl text-btnColor"></i>
                 <h5
                   class="text-[#282f3b] text-2xl font-semibold border-b-4 pb-4"
@@ -229,7 +230,7 @@
                 </p>
               </div>
               <!-- support  -->
-              <div class="space-y-4">
+              <div data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-4">
                 <i class="fas fa-headset text-4xl text-btnColor"></i>
                 <h5
                   class="text-[#282f3b] text-2xl font-semibold border-b-4 pb-4"
@@ -248,7 +249,7 @@
             <img class="order-2 py-6 md:py-0" src="./images/about.png" alt="" />
 
             <!-- innovation hr solution  -->
-            <div
+            <div data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out"
               class="bg-white p-6 lg:p-4 xl:p-6 shadow-2xl space-y-4 md:absolute md:w-[40%] top-0 left-12 rounded order-1"
             >
               <img class="mx-auto" src="./images/about-2.png" alt="" />
@@ -270,7 +271,7 @@
             </div>
 
             <!-- Leadership development  -->
-            <div
+            <div data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out"
               class="bg-white xl:p-6 lg:p-4 p-6 shadow-2xl space-y-4 md:w-[40%] md:absolute top-44 right-8 rounded order-3"
             >
               <img class="mx-auto" src="./images/about-3.png" alt="" />
@@ -313,19 +314,19 @@
                 cost and a lot of efforts.
               </p>
               <div class="flex flex-wrap gap-4 justify-between">
-                <div class="md:border-2 rounded p-6">
+                <div data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out" class="md:border-2 rounded p-6">
                   <strong class="font-extrabold text-4xl text-btnColor"
                     >330 +</strong
                   >
                   <p class="text-white font-bold">Active Clients</p>
                 </div>
-                <div class="md:border-2 p-6">
+                <div data-aos="fade-left" data-aos-duration="1400" data-aos-easing="ease-in-out" class="md:border-2 p-6">
                   <strong class="font-extrabold text-4xl text-btnColor"
                     >850 +</strong
                   >
                   <p class="text-white font-bold">Projects Done</p>
                 </div>
-                <div class="md:border-2 p-6">
+                <div data-aos="fade-left" data-aos-duration="1800" data-aos-easing="ease-in-out" class="md:border-2 p-6">
                   <strong class="font-extrabold text-4xl text-btnColor"
                     >25 +</strong
                   >
@@ -335,7 +336,7 @@
             </div>
             <div class="grid md:grid-cols-2 gap-4">
               <div class="space-y-4 relative">
-                <div class="relative">
+                <div data-aos="zoom-in" data-aos-duration="1600" data-aos-easing="ease-in-out" class="relative">
                   <img
                     class="rounded"
                     src="./images/technology-index-1.png"
@@ -350,7 +351,7 @@
                     Our Mission
                   </p>
                 </div>
-                <div class="relative">
+                <div data-aos="zoom-in" data-aos-duration="1800" data-aos-easing="ease-in-out" class="relative">
                   <img
                     class="rounded"
                     src="./images/technology-index-2.png"
@@ -368,7 +369,7 @@
               </div>
 
               <div class="space-y-4 relative pt-10">
-                <div class="relative">
+                <div data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-out" class="relative">
                   <img
                     class="rounded"
                     src="./images/technology-index-3.png"
@@ -383,7 +384,7 @@
                     Our Vision
                   </p>
                 </div>
-                <div class="relative">
+                <div data-aos="zoom-in" data-aos-duration="2200" data-aos-easing="ease-in-out" class="relative">
                   <img
                     class="rounded"
                     src="./images/technology-index-4.jpg"
@@ -426,6 +427,7 @@
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
             <!-- card one  -->
             <div
+            data-aos="zoom-in" data-aos-duration="1200" data-aos-easing="ease-in-out"
               class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
             >
               <i class="fas fa-laptop-code text-4xl text-btnColor"></i>
@@ -442,6 +444,7 @@
             </div>
             <!-- card Two  -->
             <div
+            data-aos="zoom-in" data-aos-duration="1400" data-aos-easing="ease-in-out"
               class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
             >
               <i class="fas fa-mobile-alt text-4xl text-btnColor"></i>
@@ -457,6 +460,7 @@
             </div>
             <!-- card Three  -->
             <div
+            data-aos="zoom-in" data-aos-duration="1600" data-aos-easing="ease-in-out"
               class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
             >
               <i class="fas fa-desktop text-4xl text-btnColor"></i>
@@ -471,6 +475,7 @@
             </div>
             <!-- card Four  -->
             <div
+            data-aos="zoom-in" data-aos-duration="1800" data-aos-easing="ease-in-out"
               class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
             >
               <i class="fas fa-bug text-4xl text-btnColor"></i>
@@ -485,6 +490,7 @@
             </div>
             <!-- card Five  -->
             <div
+            data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-out"
               class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
             >
               <i class="fas fa-chart-line text-4xl text-btnColor"></i>
@@ -501,6 +507,7 @@
             </div>
             <!-- card Six  -->
             <div
+            data-aos="zoom-in" data-aos-duration="2200" data-aos-easing="ease-in-out"
               class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
             >
               <i class="fas fa-users text-4xl text-btnColor"></i>
@@ -536,7 +543,7 @@
           </div>
           <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
             <!-- card one  -->
-            <div class="relative overflow-hidden">
+            <div data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out" class="relative overflow-hidden">
               <div class="group rounded-2xl overflow-hidden">
                 <img
                   class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
@@ -615,7 +622,7 @@
               </div>
             </div>
             <!-- card Two  -->
-            <div class="relative overflow-hidden">
+            <div data-aos="fade-left" data-aos-duration="1400" data-aos-easing="ease-in-out" class="relative overflow-hidden">
               <div class="group rounded-2xl overflow-hidden">
                 <img
                   class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
@@ -694,7 +701,7 @@
               </div>
             </div>
             <!-- card Three  -->
-            <div class="relative overflow-hidden">
+            <div data-aos="fade-left" data-aos-duration="1600" data-aos-easing="ease-in-out" class="relative overflow-hidden">
               <div class="group rounded-2xl overflow-hidden">
                 <img
                   class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
@@ -773,7 +780,7 @@
               </div>
             </div>
             <!-- card Four  -->
-            <div class="relative overflow-hidden">
+            <div data-aos="fade-left" data-aos-duration="1800" data-aos-easing="ease-in-out" class="relative overflow-hidden">
               <div class="group rounded-2xl overflow-hidden">
                 <img
                   class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
@@ -857,7 +864,7 @@
 
       <!-- start build your website  -->
 
-      <section class="container mx-auto buildYourWebsite rounded mb-16">
+      <section data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out" class="container mx-auto buildYourWebsite rounded mb-16">
         <div class="px-10 pt-16 pb-48">
           <div class="flex justify-between flex-wrap">
             <div class="space-y-4">
@@ -894,7 +901,7 @@
           </div>
           <div class="grid lg:grid-cols-2 gap-4">
             <div class="grid lg:grid-cols-2 gap-4 overflow-hidden">
-              <div class="relative">
+              <div data-aos="zoom-in" data-aos-duration="1400" data-aos-easing="ease-in-out" class="relative">
                 <img
                   class="max-w-full overflow-hidden h-96 rounded-md"
                   src="./images/Q&A-1.jpg"
@@ -911,7 +918,7 @@
                 </div>
               </div>
 
-              <div class="relative">
+              <div data-aos="zoom-in" data-aos-duration="1600" data-aos-easing="ease-in-out" class="relative">
                 <img
                   class="max-w-full overflow-hidden h-96 rounded-md"
                   src="./images/Q&A-2.jpg"
@@ -930,7 +937,7 @@
             </div>
 
             <div class="space-y-6">
-              <div
+              <div data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out"
                 class="collapse collapse-plus bg-white shadow-md hover:shadow-xl border-r border-dotted border-b border-btnColor"
               >
                 <input type="radio" name="my-accordion-3" checked="checked" />
@@ -946,6 +953,7 @@
                 </div>
               </div>
               <div
+              data-aos="fade-up" data-aos-duration="1400" data-aos-easing="ease-in-out"
                 class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
               >
                 <input type="radio" name="my-accordion-3" />
@@ -961,6 +969,7 @@
                 </div>
               </div>
               <div
+              data-aos="fade-up" data-aos-duration="1600" data-aos-easing="ease-in-out"
                 class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
               >
                 <input type="radio" name="my-accordion-3" />
@@ -976,6 +985,7 @@
                 </div>
               </div>
               <div
+              data-aos="fade-up" data-aos-duration="1800" data-aos-easing="ease-in-out"
                 class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
               >
                 <input type="radio" name="my-accordion-3" />
@@ -991,6 +1001,7 @@
                 </div>
               </div>
               <div
+              data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-out"
                 class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
               >
                 <input type="radio" name="my-accordion-3" />
@@ -1011,7 +1022,7 @@
       </section>
 
       <!-- start consultation  -->
-      <section class="py-28 consultant">
+      <section data-aos="fade-up" data-aos-duration="1400" data-aos-easing="ease-in-out" class="py-28 consultant">
         <div class="flex justify-center items-center">
           <div class="text-center space-y-6">
             <p class="text-white font-semibold">
@@ -1119,6 +1130,7 @@
               </div>
               <!-- contact box 01 -->
               <div
+              data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out"
                 class="p-6 border rounded-md hover:shadow-2xl transition duration-700"
               >
                 <div class="flex items-center gap-4">
@@ -1137,7 +1149,7 @@
                 </div>
               </div>
               <!-- contact box 02 -->
-              <div
+              <div data-aos="fade-left" data-aos-duration="1400" data-aos-easing="ease-in-out"
                 class="p-6 border rounded-md hover:shadow-2xl transition duration-700"
               >
                 <div class="flex items-center gap-4">
@@ -1156,7 +1168,7 @@
                 </div>
               </div>
               <!-- contact box 03 -->
-              <div
+              <div data-aos="fade-left" data-aos-duration="1600" data-aos-easing="ease-in-out"
                 class="p-6 border rounded hover:shadow-2xl transition duration-700"
               >
                 <div class="flex items-center gap-4">
@@ -1288,5 +1300,9 @@
       </div>
     </footer>
     <script src="./script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
