implement about us

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="relative  h-[100vh]">
           <img class="w-full h-full"  src="./images/banner-1.jpg" alt="">
           <!-- <div class="hero-overlay"></div> -->
-          <div class="container text-center absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+          <div class="container text-center absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 overflow-hidden">
             
               <div data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-6 max-w-3xl mx-auto">
 
@@ -216,7 +216,7 @@
               development, product design, QA and consultancy services.
             </p>
             <!-- left content bottom  -->
-            <div class="grid md:grid-cols-2 gap-6 pt-6">
+            <div class="grid md:grid-cols-2 gap-6 pt-6 overflow-hidden">
               <!-- Experience  -->
               <div data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-4">
                 <i class="fas fa-medal text-4xl text-btnColor"></i>
@@ -245,7 +245,7 @@
           </div>
 
           <!-- about right img  -->
-          <div class="relative flex flex-col">
+          <div class="relative flex flex-col overflow-hidden">
             <img class="order-2 py-6 md:py-0" src="./images/about.png" alt="" />
 
             <!-- innovation hr solution  -->
@@ -313,7 +313,7 @@
                 and hosting your team at our premises, thus saving you half a
                 cost and a lot of efforts.
               </p>
-              <div class="flex flex-wrap gap-4 justify-between">
+              <div class="flex flex-wrap gap-4 justify-between overflow-hidden">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out" class="md:border-2 rounded p-6">
                   <strong class="font-extrabold text-4xl text-btnColor"
                     >330 +</strong
@@ -335,7 +335,7 @@
               </div>
             </div>
             <div class="grid md:grid-cols-2 gap-4">
-              <div class="space-y-4 relative">
+              <div class="space-y-4 relative overflow-hidden">
                 <div data-aos="zoom-in" data-aos-duration="1600" data-aos-easing="ease-in-out" class="relative">
                   <img
                     class="rounded"
@@ -424,7 +424,7 @@
               All Service
             </button>
           </div>
-          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
+          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 overflow-hidden">
             <!-- card one  -->
             <div
             data-aos="zoom-in" data-aos-duration="1200" data-aos-easing="ease-in-out"
@@ -541,7 +541,7 @@
               being able to do what we like best every pleasure.
             </p>
           </div>
-          <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+          <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 overflow-hidden">
             <!-- card one  -->
             <div data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out" class="relative overflow-hidden">
               <div class="group rounded-2xl overflow-hidden">
@@ -864,8 +864,8 @@
 
       <!-- start build your website  -->
 
-      <section data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out" class="container mx-auto buildYourWebsite rounded mb-16">
-        <div class="px-10 pt-16 pb-48">
+      <section class="container mx-auto buildYourWebsite rounded mb-16 overflow-hidden">
+        <div  data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out" class="px-10 pt-16 pb-48">
           <div class="flex justify-between flex-wrap">
             <div class="space-y-4">
               <p class="text-white font-semibold">
@@ -936,7 +936,7 @@
               </div>
             </div>
 
-            <div class="space-y-6">
+            <div class="space-y-6 overflow-hidden">
               <div data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out"
                 class="collapse collapse-plus bg-white shadow-md hover:shadow-xl border-r border-dotted border-b border-btnColor"
               >
@@ -1022,8 +1022,8 @@
       </section>
 
       <!-- start consultation  -->
-      <section data-aos="fade-up" data-aos-duration="1400" data-aos-easing="ease-in-out" class="py-28 consultant">
-        <div class="flex justify-center items-center">
+      <section class="py-28 consultant overflow-hidden">
+        <div data-aos="fade-up" data-aos-duration="1400" data-aos-easing="ease-in-out"  class="flex justify-center items-center">
           <div class="text-center space-y-6">
             <p class="text-white font-semibold">
               // Drop us a line! We are here to answer your questions 24/7
@@ -1114,7 +1114,7 @@
                 </button>
               </form>
             </div>
-            <div class="space-y-6">
+            <div class="space-y-6 overflow-hidden">
               <!-- contact right context  -->
               <div class="space-y-4">
                 <p class="text-btnColor font-semibold">// Contact Info to</p>
@@ -1294,7 +1294,7 @@
           <p
             class="w-full mt-8 text-sm text-center text-gray-100 md:mt-0 md:w-auto md:order-2"
           >
-            © Copyright 2021, All Rights Reserved by ContestHub
+            © Copyright 2021, All Rights Reserved by Minimatic
           </p>
         </div>
       </div>
