--- a/about.html
+++ b/about.html
@@ -110,10 +110,10 @@
                                         class="text-3xl text-btnColor">M</span>inimatic <span
                                         class="text-3xl text-btnColor">S</span>olution</a>
                                 <ul class="menu">
-                                    <li class="text-btnColor hover:text-btnoolor border-b-2">
+                                    <li class="hover:text-btnColor border-b-2">
                                         <a href="index.html">Home</a>
                                     </li>
-                                    <li class="hover:text-btnColor border-b-2">
+                                    <li class="text-btnColor hover:text-btnoolor border-b-2">
                                         <a href="about.html">About</a>
                                     </li>
                                     <li class="hover:text-btnColor border-b-2">
@@ -134,10 +134,10 @@
             <!-- Navbar Center -->
             <div class="navbar-center hidden md:flex">
                 <ul class="flex gap-2 lg:gap-4 font-semibold text-white">
-                    <li class="text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
+                    <li class="hover:text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
                         <a href="index.html">Home</a>
                     </li>
-                    <li class="hover:text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
+                    <li class="text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
                         <a href="about.html">About</a>
                     </li>
                     <li class="hover:text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
@@ -165,7 +165,7 @@
         <section class="h-[80vh] relative">
             <div class="bg-black opacity-80 absolute top-0 left-0 w-full h-[80vh] overflow-hidden"></div>
             <img class="w-full h-full object-cover" src="./images/about.jpg" alt="">
-            <p  class="text-5xl text-white absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 font-bold border-b-2 ">About Us</p>
+            <p  class="text-4xl md:text-5xl text-white absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 font-bold border-b-2 ">About Us</p>
         </section>
      
 
@@ -186,7 +186,7 @@
               development, product design, QA and consultancy services.
             </p>
             <!-- left content bottom  -->
-            <div class="grid md:grid-cols-2 gap-6 pt-6">
+            <div class="grid md:grid-cols-2 gap-6 pt-6 overflow-hidden">
               <!-- Experience  -->
               <div data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-4">
                 <i class="fas fa-medal text-4xl text-btnColor"></i>
@@ -215,7 +215,7 @@
           </div>
 
           <!-- about right img  -->
-          <div class="relative flex flex-col">
+          <div class="relative flex flex-col overflow-hidden">
             <img class="order-2 py-6 md:py-0" src="./images/about.png" alt="" />
 
             <!-- innovation hr solution  -->
@@ -370,7 +370,7 @@
           <p
             class="w-full mt-8 text-sm text-center text-gray-100 md:mt-0 md:w-auto md:order-2"
           >
-            © Copyright 2021, All Rights Reserved by ContestHub
+            © Copyright 2021, All Rights Reserved by Minimatic
           </p>
         </div>
       </div>
