--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/smooth-scroll@16/dist/smooth-scroll.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- tailwind customize  -->
@@ -111,16 +112,16 @@
                                         class="text-3xl text-btnColor">S</span>olution</a>
                                 <ul class="menu">
                                     <li class="text-btnColor hover:text-btnoolor border-b-2">
-                                        <a href="index.html">Home</a>
+                                        <a href="index.html" >Home</a>
                                     </li>
                                     <li class="hover:text-btnColor border-b-2">
-                                        <a href="about.html">About</a>
+                                        <a href="#about">About</a>
                                     </li>
                                     <li class="hover:text-btnColor border-b-2">
-                                        <a href="service.html">Service</a>
+                                        <a href="#service">Service</a>
                                     </li>
                                     <li class="hover:text-btnColor border-b-2">
-                                        <a href="contact.html">Contact</a>
+                                        <a href="#contact">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -138,13 +139,13 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="hover:text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
-                        <a href="about.html">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="hover:text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
-                        <a href="service.html">Service</a>
+                        <a href="#service">Service</a>
                     </li>
                     <li class="hover:text-btnColor hover:text-btnoolor border-transparent border-b-2 hover:border-btnColor transition duration-500">
-                        <a href="contact.html">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -183,8 +184,7 @@
                   Powerful Digital Solutions
                 </h2>
                   <p class="font-normal text-base text-[#aaafb8] w-[90%] mx-auto text-center ">
-                    Duty obligations of business it will frequently occur that
-                    pleasures have to be repudiated and annoyances accepted.
+                    In the realm of business, there are unavoidable duties where pleasures must be sacrificed and challenges embraced.
                   </p>
                 
                 <button
@@ -200,14 +200,14 @@
       </section>
 
       <!-- start about company section  -->
-      <section class="container mx-auto px-10 xl:px-0 pb-28 pt-16">
+      <section id="about" class="container mx-auto px-10 xl:px-0 pb-28 pt-16">
         <div class="grid gap-24 lg:gap-0 lg:grid-cols-2">
           <!-- about left content  -->
           <div class="space-y-4">
             <p class="text-btnColor font-semibold">// About Company</p>
             <h2 class="text-[#282f3b] text-4xl font-extrabold leading-tight">
-              Your Partner for <br />
-              Software Innovation
+              Driving Software <br />
+              Innovation Forward
             </h2>
             <p class="text-[#6d6d6d]">
               Minimatic Solution is the partner of choice for many of the
@@ -259,8 +259,7 @@
                 Innovation HR Solution
               </h2>
               <p class="text-[#6d6d6d]">
-                Except too obtain some work advantages from it but whom has any
-                rights.
+                Unlocking benefits from innovation requires recognizing everyone's rights.
               </p>
               <button
                 class="hover:space-x-4 hover:text-btnColor transition-all duration-300"
@@ -281,8 +280,7 @@
                 Leadership Development
               </h2>
               <p class="text-[#6d6d6d]">
-                Actual teachings of the great explorer of the truth masters
-                human happiness.
+                True mastery of human happiness lies in embracing the teachings of great explorers of truth.
               </p>
               <button
                 class="hover:space-x-4 hover:text-btnColor transition-all duration-300"
@@ -406,16 +404,16 @@
       </section>
 
       <!-- start our service  -->
-      <section class="bg-base-200 py-16">
+      <section id="service" class="bg-base-200 py-16">
         <div class="container mx-auto space-y-8 px-10 xl:px-0">
           <div class="flex justify-between items-center flex-wrap gap-4">
             <div class="space-y-4">
               <p class="text-btnColor font-semibold">// OUR SERVICE</p>
               <h2
-                class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-tight"
+                class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-10"
               >
-                We Offer a Wide <br />
-                Variety of IT Services
+              Discover the Depth of
+              <p class="pt-3">Our IT Services Portfolio</p>
               </h2>
             </div>
             <button
@@ -534,7 +532,7 @@
             <h2
               class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-tight"
             >
-              Professional Individuals
+            Meet Our Expert Team
             </h2>
             <p class="text-[#6d6d6d] w-[50%]">
               Our power of choice is untrammelled and when nothing prevents
@@ -938,33 +936,29 @@
 
             <div class="space-y-6 overflow-hidden">
               <div data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out"
-                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl border-r border-dotted border-b border-btnColor"
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl "
               >
                 <input type="radio" name="my-accordion-3" checked="checked" />
                 <div class="collapse-title text-xl font-medium text-[#282f3b]">
-                  1. Are application fee waivers available?
+                  1. What industries do you specialize in?
                 </div>
                 <div class="collapse-content">
                   <p class="text-[#6d6d6d]">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some
-                    form, by injected humour, .
+                    We specialize in providing IT solutions across various industries, including healthcare, finance, e-commerce, and more. Our expertise spans diverse sectors to cater to the unique needs of each client.
                   </p>
                 </div>
               </div>
               <div
               data-aos="fade-up" data-aos-duration="1400" data-aos-easing="ease-in-out"
-                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl "
               >
                 <input type="radio" name="my-accordion-3" />
                 <div class="collapse-title text-xl font-medium text-[#282f3b]">
-                  2. Are application fee waivers available?
+                  2. How do you ensure the security of our data?
                 </div>
                 <div class="collapse-content">
                   <p class="text-[#6d6d6d]">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some
-                    form, by injected humour, .
+                    Security is our top priority. We implement robust encryption protocols, regularly update our security measures, and adhere to industry best practices to safeguard your data against potential threats.
                   </p>
                 </div>
               </div>
@@ -974,13 +968,11 @@
               >
                 <input type="radio" name="my-accordion-3" />
                 <div class="collapse-title text-xl font-medium text-[#282f3b]">
-                  3. Are application fee waivers available?
+                  3. Can you customize your services to fit our specific requirements?
                 </div>
                 <div class="collapse-content">
                   <p class="text-[#6d6d6d]">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some
-                    form, by injected humour, .
+                    Absolutely! We understand that every business is unique. That's why we offer customizable solutions tailored to your specific needs and objectives. Our team works closely with you to deliver personalized services that align with your goals.
                   </p>
                 </div>
               </div>
@@ -990,13 +982,11 @@
               >
                 <input type="radio" name="my-accordion-3" />
                 <div class="collapse-title text-xl font-medium text-[#282f3b]">
-                  4. Are application fee waivers available?
+                  4. What sets your team apart from other IT service providers?
                 </div>
                 <div class="collapse-content">
                   <p class="text-[#6d6d6d]">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some
-                    form, by injected humour, .
+                    Our team comprises highly skilled professionals with extensive experience in the IT industry. We're passionate about innovation and dedicated to delivering exceptional results. With our collaborative approach and commitment to excellence, we strive to exceed your expectations.
                   </p>
                 </div>
               </div>
@@ -1006,13 +996,11 @@
               >
                 <input type="radio" name="my-accordion-3" />
                 <div class="collapse-title text-xl font-medium text-[#282f3b]">
-                  5. Are application fee waivers available?
+                  5. How can we get started with your services?
                 </div>
                 <div class="collapse-content">
                   <p class="text-[#6d6d6d]">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some
-                    form, by injected humour, .
+                    Getting started with us is simple. Reach out to our team, and we'll schedule a consultation to discuss your requirements in detail. From there, we'll develop a customized plan tailored to your needs and initiate the process to bring your vision to life.
                   </p>
                 </div>
               </div>
@@ -1041,7 +1029,7 @@
       </section>
 
       <!-- start contact  -->
-      <section class="bg-base-100">
+      <section id="contact" class="bg-base-100">
         <div class="container mx-auto py-16 px-10 xl:px-0">
           <div class="grid lg:grid-cols-2 gap-6">
             <div class="shadow-2xl rounded-md p-6 order-last lg:order-first">
